src/test/ui/associated-const-impl-wrong-type.stderr
error[E0326]: implemented const `BAR` has an incompatible type for trait
  --> $DIR/associated-const-impl-wrong-type.rs:19:16
   |
13 |     const BAR: u32;
   |                --- type in trait
...
19 |     const BAR: i32 = -1;
   |                ^^^ expected u32, found i32

error: aborting due to previous error

